--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -24,7 +24,7 @@ Dans cette approche, les modules des architectures sont en interaction continue 
 Le comportement global du système résulte alors de l'interaction entre les modules et non seulement de la somme des comportements des modules pris individuellement~: il s'agit de systèmes complexes.
 Dans cette vision bio-inspirée, la fonction de chaque module n'a de sens que par ses interactions au sein de l'architecture.
 
-La création d'architectures d'apprentissage modulaires, inspirées du cerveau, se retrouve sous le nom d'architectures cognitives~\parencite{Kotseruba201840YO}. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, en s'inspirant des capacités du cerveau.
+La création d'architectures d'apprentissage modulaires, inspirées du cerveau, se retrouve sous le nom d'architectures cognitives. Nous renvoyons à~\cite{Thrisson2012CognitiveAA,Kotseruba201840YO} pour des revues de ce domaine. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, en s'inspirant des capacités du cerveau.
 Ces architectures cognitives trouvent leur application en robotique autonome.
 L'incorporation de mécanismes d'apprentissage au sein d'agents doit en effet prendre en compte l'aspect temporel et continu du flux de donnée entrant, ce qui appelle à la conception d'architectures d'apprentissage capables de prise de décision autonome.
 \cite{brooks_sumsumption_85} a par exemple exploité cette approche modulaire avec l'architecture de \emph{subsumption}. L'auteur propose un système artificiel composé de modules ayant une fonction simple, telle que \og avancer \fg{} ou \og éviter un objet \fg{}. Ces modules sont connectés au sein d'une architecture présentant des rétroactions. Il met en évidence que malgré la simplicité de chacun des modules, le robot est capable d'effectuer des tâches plus complexes, comme explorer son environnement ou suivre une trajectoire tout en évitant les obstacles. Ces tâches de décision émergent de l'interaction des modules simples.
@@ -54,7 +54,7 @@ L'idée d'architecture modulaire de cartes auto-organisatrices semble donc déco
 \end{quote}
 
 Depuis, bien que des travaux aient proposé des architectures hiérarchiques de cartes auto-organisatrices, peu ont cherché à les assembler en architectures modulaires non hiérarchiques. 
-Les travaux réalisés dans notre équipe de recherche se sont attachés à concevoir un modèle d'architecture modulaire exploitant la position du BMU comme interface entre les cartes~\parencite{baheux_towards_2014}.
+Les travaux réalisés dans notre équipe de recherche ont initié la conception d'un modèle d'architecture modulaire exploitant la position du BMU comme interface entre les cartes~\parencite{baheux_towards_2014}.
 
 Cette thèse poursuit le développement de ce modèle et étudie expérimentalement les comportements qui émergent de l'association des cartes en architecture.
 L'architecture que nous proposons rejoint l'idée d'implémenter des mécanismes liés à la cognition, tels que l'apprentissage non-supervisé, la prise de décision autonome, l'apprentissage associatif de données multimodales et le traitement de données temporelles, s'inspirant du traitement multisensoriel du cerveau humain. 
