--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -17,12 +17,13 @@
 \section{Introduction}
 
 Nous avons défini dans les chapitres précédents les règles d'apprentissage permettant de construire un modèle d'architectures non hiérarchiques de cartes auto-organisatrices, le modèle CxSOM.
-La démarche de création de ce modèle se veut synthétique~: les règles d'évolution des modules ont été définies au regard des modèles existants dans la littérature et des considérations inspirées de la biologie. Nous voulons maintenant étudier les propriétés d'organisation et d'apprentissage que présente l'architecture CxSOM.
-
 Dans ces travaux, nous avons choisi de nous concentrer sur un cadre spécifique d'apprentissage~: la mémoire associative.
 L'objectif de la mémoire associative pour une architecture de cartes est d'apprendre une représentation des relations existant entre des entrées provenant de différentes modalités, tout en apprenant une représentation de chaque espace d'entrée au sein des cartes.
 
-Pour analyser cet apprentissage associatif émergeant d'une architecture de cartes, nous avons besoin d'introduire de nouvelles représentations par rapport à celles utilisées pour l'étude des SOM classiques. Ce chapitre élabore les représentations que nous utiliserons dans les expériences présentées dans la suite de cette thèse.
+Nous nous plaçons dans une démarche expérimentale d'analyse des propriétés émergentes du modèle CxSOM. 
+La relaxation fait de l'architecture un système dynamique, difficilement interprétable analytiquement. 
+L'étude des mécanismes d'apprentissage émergents ne peut se faire qu'en exécutant et simulant les modèles.
+Pour analyser l'apprentissage associatif émergeant d'une architecture de cartes, nous avons besoin d'introduire de nouvelles représentations par rapport à celles utilisées pour l'étude des SOM classiques. Ce chapitre élabore les représentations que nous utiliserons dans les expériences présentées dans la suite de cette thèse.
 Elles ont pour but de mettre en évidence l'apprentissage des entrées et des relations entre entrées au sein de l'architecture.
 La création de méthodes de représentation adaptées au modèle CxSOM sur une architecture élémentaire de peu de cartes nous permet de poser des bases pour l'étude de plus grandes architectures.
 
