--- a/05-Indicateur/source.tex
+++ b/05-Indicateur/source.tex
@@ -380,7 +380,7 @@ Le coefficient d'incertitude est une version normalisée de l'information mutuel
 Le ratio de corrélation permet de mesurer directement la relation fonctionnelle entre $U$ et $\bmu$, en passant par l'estimation de $\mathbb{E}(U|\bmu)$.
 Dans un but de mesure de la relation fonctionnelle entre $U$ et $\bmu$, nous avons observé que le ratio de corrélation est à privilégier, car il est estimable pour des valeurs de $U$ en toute dimension et ne dépend pas de la taille d'intervalle choisie pour $U$. Sa valeur devra cependant être comparée aux valeurs du ratio de corrélation sur les données d'entrée $\eta(U;\inpx)$.
 
-La relation fonctionnelle entre $U$ et $\bmu$ n'est toutefois pas une propriété souhaitable dans des plus grandes architectures ou pour des $U$ de plus grande dimension, car elle semble induire une forte perte d'information sur l'entrée externe pour permettre un gain d'information sur le modèle, ce que nous avons constaté par le calcul de l'information mutuelle entre $U$ et $\bmu$.
+La relation fonctionnelle entre $U$ et $\bmu$ n'est toutefois pas une propriété souhaitable dans de plus grandes architectures ou pour des $U$ de plus grande dimension, car elle semble induire une forte perte d'information sur l'entrée externe pour permettre un gain d'information sur le modèle, ce que nous avons constaté par le calcul de l'information mutuelle entre $U$ et $\bmu$.
 On voudrait plutôt que la représentation de $U$ soit distribuée entre les cartes.
 Pour étudier l'apprentissage associatif dans un cadre plus général, nous suggérons aux travaux futurs de s'intéresser à des mesures d'information mutuelle multivariée entre $U$ et toutes les valeurs des BMU $(\bmu\m{1}, \cdots, \bmu\m{n})$ au sein des architectures de cartes.
 Enfin, les indicateurs proposés ici calculent des valeurs locales à une carte. Il serait pertinent d'envisager des indicateurs mesurant l'apprentissage d'un point de vue global à l'architecture.
