--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1975,3 +1975,10 @@ publisher = {MIT Press}
 	year = {2011},
   pages = {268--302},
   }
+
+@inproceedings{Thrisson2012CognitiveAA,
+  title={Cognitive Architectures and Autonomy: A Comparative Review},
+  author={Kristinn R. Th{\'o}risson and Helgi Helgasson},
+  booktitle={Journal of Artificial General Intelligence},
+  year={2012}
+}
