--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -6,8 +6,8 @@ L'utilisation de cartes auto-organisatrices en tant que modules est en particuli
 Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. Cette thèse se place dans la continuité de ces travaux afin de continuer le développement du modèle d'architecture et d'analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
 
 
-Ce manuscrit présente CxSOM \emph{Consensus-driven multi-SOM}. Ce modèle permet d'associer des cartes en architectures modulaires.
-Nous avons suivi une démarche synthétique~: à partir des architectures existantes et des modèles étudiés dans notre équipe de recherche, nous avons proposé le modèle d'architecture CxSOM, puis avons étudié expérimentalement son comportement sur des blocs de base, en vue d'un développement futur.
+Ce manuscrit présente CxSOM, pour \emph{Consensus-driven multi-SOM}. Ce modèle permet d'associer des cartes en architectures modulaires. La conception de ce modèle suit une démarche expérimentale~: nous avons proposé un modèle d'architecture conçu à partir des architectures existantes.
+L'étude des mécanismes d'apprentissage passe ensuite par l'exécution et l'observation de ce modèle.
 
 Dans cette démarche, le chapitre~\ref{chap:architectures} se présente comme une revue des modèles existants d'architectures hiérarchiques et non hiérarchiques construites à base de cartes auto-organisatrices. 
 Nous avons unifié les notations de ces modèles issus de différents domaines de l'informatique. Cette revue nous a permis d'identifier les mécanismes et structures communs à ces architectures.
