Manuscrit, final release

--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -1,7 +1,8 @@
 \chapter*{Introduction}
 
 Façonnée par des millions d'années d'évolution, la nature présente une incroyable diversité de systèmes qui s'adaptent à leur environnement par l'échange, le stockage et le traitement d'information.
-Considérée comme un système computationnel, la nature présente ainsi des capacités de calcul extrêmement performantes et efficaces. La conception de systèmes de calculs bio-inspirés part de ce constat de performance et cherche à implémenter certains mécanismes observés dans la nature.
+Considérée comme un système computationnel, la nature présente des capacités de calcul extrêmement performantes et efficaces. 
+La conception de systèmes de calculs bio-inspirés part de ce constat de performance et cherche à implémenter certains mécanismes observés dans la nature.
 La bio-inspiration a fait ses preuves en intelligence artificielle, robotique ou optimisation. De nombreux algorithmes d'optimisation se sont ainsi inspirés des colonies de fourmis, des essaims d'abeilles, des bancs de poissons ou des chauves-souris, tous ces groupes d'animaux présentant des stratégies de communication efficaces pour accomplir une tâche donnée~\parencite{Darwish2018BioinspiredCA}.
 De plus, la recherche en biologie ne cesse d'évoluer, amenant avec elle de nouvelles possibilités d'inspiration biologique.
 
@@ -24,7 +25,7 @@ Dans cette approche, les modules des architectures sont en interaction continue 
 Le comportement global du système résulte alors de l'interaction entre les modules et non seulement de la somme des comportements des modules pris individuellement~: il s'agit de systèmes complexes.
 Dans cette vision bio-inspirée, la fonction de chaque module n'a de sens que par ses interactions au sein de l'architecture.
 
-La création d'architectures d'apprentissage modulaires, inspirées du cerveau, se retrouve sous le nom d'architectures cognitives. Nous renvoyons à~\cite{Thrisson2012CognitiveAA,Kotseruba201840YO} pour des revues de ce domaine. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, en s'inspirant des capacités du cerveau.
+Ces architectures d'apprentissage modulaires, inspirées du cerveau, se retrouvent sous le nom d'architectures cognitives. Nous renvoyons à~\cite{Thrisson2012CognitiveAA,Kotseruba201840YO} pour des revues de ce domaine. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, en s'inspirant des capacités du cerveau.
 Ces architectures cognitives trouvent leur application en robotique autonome.
 L'incorporation de mécanismes d'apprentissage au sein d'agents doit en effet prendre en compte l'aspect temporel et continu du flux de donnée entrant, ce qui appelle à la conception d'architectures d'apprentissage capables de prise de décision autonome.
 \cite{brooks_sumsumption_85} a par exemple exploité cette approche modulaire avec l'architecture de \emph{subsumption}. L'auteur propose un système artificiel composé de modules ayant une fonction simple, telle que \og avancer \fg{} ou \og éviter un objet \fg{}. Ces modules sont connectés au sein d'une architecture présentant des rétroactions. Il met en évidence que malgré la simplicité de chacun des modules, le robot est capable d'effectuer des tâches plus complexes, comme explorer son environnement ou suivre une trajectoire tout en évitant les obstacles. Ces tâches de décision émergent de l'interaction des modules simples.
