--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -100,19 +100,24 @@ Nous pouvons également envisager la construction d'un système d'apprentissage 
 
 Nous pouvons également envisager des perspectives d'applications en robotique autonome.
 Une première application serait d'utiliser la capacité de prédiction d'une ou plusieurs cartes de l'architecture en tant que modules de décision à partir des capteurs et commandes d'un robot, dans l'esprit de l'expérience réalisée sur le drone au chapitre~\ref{chap:analyse}.
-Après une phase d'apprentissage par imitation, ces modules de décision ne prennent plus leur entrée. Leur sortie est utilisée comme commande du robot. Il peut s'agir d'un suivi de trajectoire, ou de décisions plus complexes d'exploration de l'environnement.
+Après une phase d'apprentissage par imitation, ces modules de décision ne prennent plus leur entrée. Leur sortie est utilisée comme commande du robot. Il pourrait s'agir d'un suivi de trajectoire, ou de décisions plus complexes relatives à l'exploration de l'environnement.
 Une deuxième possibilité d'application de l'architecture vient de sa robustesse aux données manquantes, suggérée par la capacité de prédiction observée dans nos travaux.
 Ce cas de figure est rencontré fréquemment en robotique~: les capteurs n'ont pas tous la même fréquence d'acquisition ou peuvent être défaillants. 
 Dans l'algorithme CxSOM, une modalité qui manque n'induit pas de modification globale de l'algorithme de mise à jour~: seule la carte qui est concernée par la modalité définit si elle utilise son activité globale ou seulement son activité contextuelle pour calculer le BMU à envoyer aux autres cartes.
-Si lors d'une itération, il manque une modalité, l'apprentissage effectué par les autres cartes pourrait ainsi ne pas être perturbé.
+Si lors d'une itération, il manque une modalité, l'apprentissage effectué par les autres cartes ne serait donc pas perturbé.
 
 
 Quels que soient les applications et développements futurs du modèle CxSOM, nos travaux contribuent plus globalement à une vision originale des cartes auto-organisatrices. Nous les avons utilisées comme un support pour la conception d'un système d'apprentissage incluant une dynamique, qui s'éloigne de la vision classique de la SOM comme un algorithme de quantification vectorielle.
 La transmission de la seule position du BMU entre cartes est une façon élégante et simple de connecter des cartes, et les comportements d'organisation complexes observés sur des cartes 1D et 2D soulignent la force que porte une simple information positionnelle utilisée comme représentation d'un espace d'entrée.
 
 
+% \section*{Publications}
 
-%Tout d'abord, pour faire émerger un apprentissage du modèle d'entrée et non seulement de l'entrée externe, nous avons proposé de prendre un grand rayon de voisinage externe $r_e$ face au rayon contextuel $r_c$. 
-% Cette différence d'échelle entre paramètres induit une organisation subordonnée des poids contextuels face aux poids externes lors de l'apprentissage, conduisant les cartes à s'organiser selon deux échelles d'indices.
-% Il s'agit un compromis entre l'encodage de $U$ et la qualité de la quantification vectorielle sur $\inpx$, dont la qualité est réduite par rapport à une carte classique.
-% L'encodage du modèle d'entrée dans chaque carte est caractérisé par le fait que $U$ est directement une fonction de la position du BMU $\bmu$.
+% \begin{thebibliography}{1}
+    
+%     \end{thebibliography}
+
+% \subsection*{Code}
+
+% L'implémentation des expériences présentées dans ce manuscrit est disponible sur github : \url{https://github.com/ngonnier/cxsom-expes}
+
