--- a/publis.bib
+++ b/publis.bib
@@ -6,7 +6,14 @@
   YEAR = {2020},
   MONTH = Nov,
   DOI = {10.1007/978-3-030-63823-8\_60},
-  KEYWORDS = {Neural Network Models ; Self-Organizing Maps ; Multi-Modal Architecture},
-  HAL_ID = {hal-03030518},
-  HAL_VERSION = {v1},
+  keywords = {mypublis}
+}
+
+@inproceedings{Gonnier2021InputPU,
+  title={Input Prediction Using Consensus Driven SOMs},
+  author={No{\'e}mie Gonnier and Yann Boniface and Herv{\'e} Frezza-Buet},
+  booktitle={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  year={2021},
+  pages={38-42},
+  keywords = {mypublis}
 }
