--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1396,20 +1396,7 @@
   pages={452-456}
 }
 
-@inproceedings{Gonnier2020ConsensusDS,
-  title={Consensus Driven Self-Organization: Towards Non Hierarchical Multi-Map Architectures},
-  author={No{\'e}mie Gonnier and Yann Boniface and Herv{\'e} Frezza-Buet},
-  booktitle={ICONIP},
-  year={2020}
-}
 
-@article{Gonnier2021InputPU,
-  title={Input Prediction Using Consensus Driven SOMs},
-  author={No{\'e}mie Gonnier and Yann Boniface and Herv{\'e} Frezza-Buet},
-  journal={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
-  year={2021},
-  pages={38-42}
-}
 
 @article{Pless2009ASO,
   title={A Survey of Manifold Learning for Images},
@@ -1981,4 +1968,25 @@ publisher = {MIT Press}
   author={Kristinn R. Th{\'o}risson and Helgi Helgasson},
   booktitle={Journal of Artificial General Intelligence},
   year={2012}
+}
+
+
+@incollection{gonnier2020,
+  TITLE = {{Consensus Driven Self-Organization: Towards Non Hierarchical Multi-Map Architectures}},
+  AUTHOR = {Gonnier, No{\'e}mie and Boniface, Yann and Frezza-Buet, Herv{\'e}},
+  BOOKTITLE = {{Communications in Computer and Information Science, Neural Information Processing, ICONIP 2020}},
+  PAGES = {526-534},
+  YEAR = {2020},
+  MONTH = Nov,
+  DOI = {10.1007/978-3-030-63823-8\_60},
+  keywords = {mypublis}
+}
+
+@inproceedings{Gonnier2021InputPU,
+  title={Input Prediction Using Consensus Driven SOMs},
+  author={No{\'e}mie Gonnier and Yann Boniface and Herv{\'e} Frezza-Buet},
+  booktitle={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  year={2021},
+  pages={38-42},
+  keywords = {mypublis}
 }
