--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
   %  backrefpages={see pp.}
   backrefpages={}
 }
-%\addbibresource{\subfix{./Biblio/biblio.bib}}
+
 \addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
@@ -69,7 +69,7 @@
 \include{titlepage}
 \begin{ThesisAbstract}
   \begin{FrenchAbstract}
-Le cortex cérébral apparaît dans de nombreux travaux comme une architecture de modules autonomes, les aires corticales, connectés rétroactivement. Elles interagissent autour des informations sensorielles ou de plus haut niveau et implémentent des tâches d'apprentissage extrêmement sophistiquées. Cette notion bio-inspirée d'architecture modulaire présente un intérêt computationnel dans la recherche de nouveaux paradigmes d'apprentissage. Il s'agit en effet de systèmes complexes, propices à faire émerger des mécanismes d'apprentissage dus à l'interaction entre les modules.
+Le cortex cérébral apparaît dans de nombreux travaux comme une architecture de modules autonomes, les aires corticales, connectées rétroactivement. Elles échangent des informations sensorielles ou de plus haut niveau et implémentent des tâches d'apprentissage extrêmement sophistiquées. Cette notion bio-inspirée d'architecture modulaire présente un intérêt computationnel dans la recherche de nouveaux paradigmes d'apprentissage. Il s'agit en effet de systèmes complexes, propices à faire émerger des mécanismes d'apprentissage dus à l'interaction entre les modules.
 Partant de cette inspiration biologique, cette thèse propose d'étudier la création d'architecture modulaire non hiérarchique de cartes auto-organisatrices.
 Les cartes auto-organisatrices sont un algorithme d'apprentissage non-supervisé permettant de représenter de façon ordonnée et en faible dimension un espace d'entrées quelconques. Cet algorithme s'inspire de l'organisation présente dans les aires corticales. 
 Par la simplicité de leurs règles de mise à jour et leur capacité de représenter chaque entrée par une position, les cartes nous apparaissent comme des candidates naturelles à la conception d'une architecture modulaire.
@@ -79,11 +79,11 @@ Pour analyser ces mécanismes, nous mettons l'accent sur une méthode de représ
 En particulier, le modèle présente un comportement de prédiction d'entrée, rendu possible par les interactions entre les modules de l'architecture.
 La proposition du modèle CxSOM et l'analyse des comportements sur des architectures simples nous permettent d'élaborer une base de travail, vers la conception d'architectures non hiérarchiques comportant de nombreuses cartes.
 
-  \KeyWords{Cartes auto-organisatrices, architecture modulaire, mécanismes d'apprentissage}
+  \KeyWords{Cartes auto-organisatrices, architecture modulaire, mécanismes d'apprentissage, bio-inspiration}
   \end{FrenchAbstract}
 
   \begin{EnglishAbstract}
-The cerebral cortex appears in many models as an architecture of autonomous modules connected retroactively, interacting around sensory and higher-level information and implementing extremely sophisticated learning tasks. 
+The cerebral cortex appears in many models as an architecture of autonomous modules connected retroactively, exchanging sensory and higher-level information and implementing extremely sophisticated learning tasks. 
 This bio-inspired concept of a modular architecture has also a computational interest in the search for new learning paradigms, especially for the design of autonomous learning networks. They are indeed complex systems, which can conduct to the emergence of learning mechanisms due to the interaction between the modules.
 This thesis creates a non-hierarchical architecture model of self-organizing maps.
 Self-organizing maps are an unsupervised learning algorithm that creates an ordered representation of any input space onto a low-dimensional space, and is inspired by the organization present in cortical areas. 
@@ -94,7 +94,7 @@ We focus on highlighting associative memory mechanisms between several modalitie
 To analyze these mechanisms, we focus on a method to represent the architecture's responses, and propose visualization and learning measurement tools. Through this analysis framework, we were able to highlight specific learning behaviors of the architecture model. Particulary, we show an input prediction behavior that emerges from the interactions between the maps of the architecture.
 The construction of the CxSOM model and the analysis of its behavior on simple architectures stand as groundwork towards the design of a non-hierarchical architecture model with numerous maps.
    
-    \KeyWords{Self-organizing maps, modular architecture, learning mechanisms }
+    \KeyWords{Self-organizing maps, modular architecture, learning mecanisms, bio-inspiration}
     \end{EnglishAbstract}
   \end{ThesisAbstract}
 
@@ -112,6 +112,12 @@ The construction of the CxSOM model and the analysis of its behavior on simple a
 \subfile{Conclusion}
 %Bibliography files
 
+\nocite{gonnier2020}
+\nocite{Gonnier2021InputPU}
 
- \printbibliography
+\printbibliography[keyword=mypublis, title={Publications}]
+\section*{Code}
+Le code source des expériences présentées dans ce manuscrit est rassemblé en~\url{https://github.com/ngonnier/cxsom-expes}
+
+\printbibliography[title={Bibliographie}]
 \end{document}
