--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,8 @@
 \usepackage{subfiles}
 \usepackage{float}
 \usepackage{setspace}
+\usepackage{refcount}% required for \getpagerefnumber
+\usepackage{xr}% required to reference labels in external documents
 
 \SetRealMargins{30mm}{20mm}
 \renewcommand{\floatpagefraction}{.8}
@@ -67,6 +69,7 @@
 \begin{document}
 \dominitoc
 \include{titlepage}
+
 \begin{ThesisAbstract}
   \begin{FrenchAbstract}
 Le cortex cérébral apparaît dans de nombreux travaux comme une architecture de modules autonomes, les aires corticales, connectées rétroactivement. Elles échangent des informations sensorielles ou de plus haut niveau et implémentent des tâches d'apprentissage extrêmement sophistiquées. Cette notion bio-inspirée d'architecture modulaire présente un intérêt computationnel dans la recherche de nouveaux paradigmes d'apprentissage. Il s'agit en effet de systèmes complexes, propices à faire émerger des mécanismes d'apprentissage dus à l'interaction entre les modules.
@@ -97,6 +100,18 @@ The construction of the CxSOM model and the analysis of its behavior on simple a
     \KeyWords{Self-organizing maps, modular architecture, learning mecanisms, bio-inspiration}
     \end{EnglishAbstract}
   \end{ThesisAbstract}
+
+  \begin{ThesisAcknowledgments}
+    
+ Je tiens tout naturellement à remercier mes directeurs de thèse, qui proposé ce sujet vaste et accompagnée dans ce travail de recherche. Je remercie également les membres du jury qui ont consacré du temps pour la lecture et les retours de ce manuscrit.
+
+
+S'il est des gens à remercier tout particulièrement pour l'existence de cette thèse, ce sont bien
+les collègues du LORIA. Dans un contexte de covid menant la majorité de ces travaux à avoir été réalisés seule derrière mon PC, les discussions et échanges avec les autres membres du laboratoire ont été salvateurs.
+Je remercie Adrien, Pierre et Yann pour toutes les discussions scientifiques, politiques, philosophiques et légères qui ont enrichi ces années dans ce bureau et ailleurs. Je remercie également Athénaïs qui a toujours cru en moi et dont la passion débordante et communicative pour la science m'a toujours motivée. Merci enfin également à toustes les membres du laboratoire que j'ai pu rencontrer pendant ces quatre ans et qui ont permis à cette thèse de ne pas être un pénible travail solitaire et à qui je souhaite toute la réussite pour la suite.
+Merci enfin à tous ceux et celles qui ont partagé ma vie à Nancy, \'Edith, Solenn, Anaïs, Hugo, Sophie ... pour m'avoir sorti la tête des lignes de code.
+
+\end{ThesisAcknowledgments}
 
 \setcounter{tocdepth}{1}
 \tableofcontents
