--- a/titlepage.tex
+++ b/titlepage.tex
@@ -5,14 +5,14 @@
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
 % Jury:
-% \President = {Le président &du jury}
-\Rapporteurs = {Frédéric Alexandre & Directeur de Recherche, INRIA Bordeaux Sud-Ouest \\
-    Madalina Olteanu & Professeur, Université Paris Dauphine PSL\\
+\President = {Frédéric Alexandre & Directeur de recherche, INRIA Bordeaux}
+\Rapporteurs = {Frédéric Alexandre & Directeur de Recherche, INRIA Bordeaux \\
+    Madalina Olteanu & Professeure, Université Paris Dauphine PSL\\
 \\}
 \Examinateurs = {
-    Lydia Boudjeloud-Assala & Maîtresse de conférence, Université de Lorraine\\
+    Lydia Boudjeloud-Assala & Maîtresse de conférence HDR, Université de Lorraine\\
     Mathias Quoy & Professeur, CY-Université Cergy \\
 }
-\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupélec}
-\CoDirecteur = {Yann Boniface & Maître de conférence, Université de Lorraine}
+\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupélec \\
+Yann Boniface & Maître de conférence, Université de Lorraine}
 \MakeThesisTitlePage
