mise a jour remerciements

--- a/main.tex
+++ b/main.tex
@@ -102,14 +102,11 @@ The construction of the CxSOM model and the analysis of its behavior on simple a
   \end{ThesisAbstract}
 
   \begin{ThesisAcknowledgments}
-    
- Je tiens tout naturellement à remercier mes directeurs de thèse, qui proposé ce sujet vaste et accompagnée dans ce travail de recherche. Je remercie également les membres du jury qui ont consacré du temps pour la lecture et les retours de ce manuscrit.
-
-
-S'il est des gens à remercier tout particulièrement pour l'existence de cette thèse, ce sont bien
-les collègues du LORIA. Dans un contexte de covid menant la majorité de ces travaux à avoir été réalisés seule derrière mon PC, les discussions et échanges avec les autres membres du laboratoire ont été salvateurs.
-Je remercie Adrien, Pierre et Yann pour toutes les discussions scientifiques, politiques, philosophiques et légères qui ont enrichi ces années dans ce bureau et ailleurs. Je remercie également Athénaïs qui a toujours cru en moi et dont la passion débordante et communicative pour la science m'a toujours motivée. Merci enfin également à toustes les membres du laboratoire que j'ai pu rencontrer pendant ces quatre ans et qui ont permis à cette thèse de ne pas être un pénible travail solitaire et à qui je souhaite toute la réussite pour la suite.
-Merci enfin à tous ceux et celles qui ont partagé ma vie à Nancy, \'Edith, Solenn, Anaïs, Hugo, Sophie ... pour m'avoir sorti la tête des lignes de code.
+  
+Je tiens tout naturellement à remercier mes directeurs de thèse, qui ont proposé ce sujet vaste et m'ont accompagnée dans ce travail de recherche. Je remercie également les membres du jury pour leur lecture et retours sur ce manuscrit.
+Je souhaite également remercier les nombreuses personnes que j'ai rencontrées au LORIA.
+Je remercie Adrien, Pierre et Yann pour les discussions scientifiques, politiques, philosophiques ou plus légères qui ont enrichi ces années dans et hors du bureau. Je remercie également Athénaïs qui a toujours cru en moi et dont la passion débordante et communicative pour la science m'a toujours motivée. Merci plus largement à toustes les membres du laboratoire que j'ai pu rencontrer pendant ces quatre ans et qui ont permis à cette thèse de ne pas être un travail solitaire.
+Merci enfin à tous ceux et celles qui ont partagé ma vie à Nancy, \'Edith, Solenn, Anaïs, Hugo... pour m'avoir sorti la tête des lignes de code.
 
 \end{ThesisAcknowledgments}
 
